[package]
name = "rs-x11-hash"
version = "0.1.9"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Rust bindings for x11 hashing algorithm"
repository = "https://github.com/pankcuf/rs-x11-hash"

[dependencies]
libc = "0.2.137"

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
cc = "1.0.77"
bindgen = ">= 0.57.0, <= 0.65.1"

[lib]
name = "rs_x11_hash"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = "thin"
opt-level = 3

