[package]
name = "rs-x11-hash"
version = "0.1.9"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Rust bindings for x11 hashing algorithm"
repository = "https://github.com/dashpay/rs-x11-hash"

[dev-dependencies]
hex = "0.4"

[build-dependencies]
cc = "1.2"

[lib]
name = "rs_x11_hash"
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = "thin"
opt-level = 3

